# python-localstack-ses-example

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
docker/: Dockerfile  compose.yaml
domain/email/models/: email_message.py  email_send_result.py
domain/email/ports/: email_client.py
infrastructure/email/: email_client.py  ses.py
resources/: init.sh
src/: aws.py  main.py  schemas.py
src/aws/: ses.py
src/core/: settings.py
src/modules/email/: controller.py  service.py
src/modules/email/schemas/: email.py
src/modules/ping/: controller.py
