[project]
name = "python-localstack-ses-example"
version = "0.1.0"
description = "Python LocalStack SES example project"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.115.14",
    "pydantic~=2.10.6",
    "mypy-boto3-ses~=1.35.93",
    "boto3~=1.35.99",
    "uvicorn~=0.32.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
